--- a/_photos.scss
+++ b/_photos.scss
@@ -11,28 +11,89 @@
         position: absolute;
         width: 0;
         transition: 1.2s;
-        height: 100%;
-        border: 2px solid black;
+        height: 100vh;
+        border: 4px solid black;
         background-color: rgba(0, 0, 0, 0.573);
-        // z-index: 99999;
+
         display: flex;
         justify-content: center;
         align-items: center;
         visibility: hidden;
+
+
+        .leftleft {
+
+            position: absolute;
+            top: 300px;
+            padding: 10px 18px;
+            left: 50px;
+            background-color: rgb(61, 56, 56);
+            cursor: pointer;
+            color: white;
+            font-weight: 550;
+            border: 2px solid rgba(0, 0, 0, 0.253);
+
+
+            &:hover {
+                background-color: black;
+                font-weight: 550;
+            }
+
+        }
+
+        .rightright {
+
+            position: absolute;
+            top: 300px;
+            padding: 10px 18px;
+            right: 50px;
+            background-color: rgb(61, 56, 56);
+            cursor: pointer;
+            color: white;
+            font-weight: 550;
+            border: 2px solid rgba(0, 0, 0, 0.253);
+
+
+            &:hover {
+                background-color: black;
+                font-weight: 550;
+            }
+
+        }
 
         .closeee {
             position: absolute;
             top: 40px;
             padding: 10px 18px;
             right: 50px;
-            background-color: rgba(137, 43, 226, 0.429);
-            // line-height: 40px;
+            background-color: rgb(61, 56, 56);
             cursor: pointer;
+            color: white;
+            font-weight: 550;
             border: 2px solid rgba(0, 0, 0, 0.253);
-            border-radius: 50%;
+
 
             &:hover {
-                background-color: rgba(137, 43, 226, 0.824);
+                background-color: black;
+                font-weight: 550;
+            }
+        }
+
+        .zoom {
+            position: absolute;
+            top: 40px;
+            padding: 10px 18px;
+            right: 150px;
+            background-color: rgb(61, 56, 56);
+            // line-height: 40px;
+            cursor: pointer;
+            color: white;
+            font-weight: 550;
+            border: 2px solid rgba(0, 0, 0, 0.253);
+            // border-radius: 50%;
+
+            &:hover {
+                background-color: black;
                 font-weight: 550;
             }
         }
@@ -55,18 +116,12 @@
             // border: 2px solid black;
             transition: 1s;
 
-
-
-
             &:hover {
                 cursor: zoom-in;
                 transform: scaleX(1.3) scaleY(1.2);
                 // box-shadow: 4px 4px 4px 4px black, -4px -4px 4px 4px black, 4px -4px 4px 4px black;
             }
         }
-
-
-
 
         @media(max-width:1050px) {
             .photos {
@@ -98,42 +153,42 @@
 #p1 {
 
     background-image: url('./src/dogger_img_sm_1.jpg.webp');
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 #p2 {
     background-image: url('./src/dogger_img_sm_2.jpg.webp');
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 #p3 {
     background-image: url('./src/dogger_img_sm_3.jpg.webp');
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 #p4 {
     background-image: url('./src/dogger_img_sm_4.jpg.webp');
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 #p5 {
     background-image: url('./src/dogger_img_sm_5.jpg.webp');
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 #p6 {
     background-image: url('./src/dogger_img_sm_6.jpg.webp');
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
