--- a/dogger.css
+++ b/dogger.css
@@ -795,26 +795,72 @@
   position: absolute;
   width: 0;
   transition: 1.2s;
-  height: 100%;
-  border: 2px solid black;
+  height: 100vh;
+  border: 4px solid black;
   background-color: rgba(0, 0, 0, 0.573);
   display: flex;
   justify-content: center;
   align-items: center;
   visibility: hidden;
 }
+.photo .big-box .leftleft {
+  position: absolute;
+  top: 300px;
+  padding: 10px 18px;
+  left: 50px;
+  background-color: rgb(61, 56, 56);
+  cursor: pointer;
+  color: white;
+  font-weight: 550;
+  border: 2px solid rgba(0, 0, 0, 0.253);
+}
+.photo .big-box .leftleft:hover {
+  background-color: black;
+  font-weight: 550;
+}
+.photo .big-box .rightright {
+  position: absolute;
+  top: 300px;
+  padding: 10px 18px;
+  right: 50px;
+  background-color: rgb(61, 56, 56);
+  cursor: pointer;
+  color: white;
+  font-weight: 550;
+  border: 2px solid rgba(0, 0, 0, 0.253);
+}
+.photo .big-box .rightright:hover {
+  background-color: black;
+  font-weight: 550;
+}
 .photo .big-box .closeee {
   position: absolute;
   top: 40px;
   padding: 10px 18px;
   right: 50px;
-  background-color: rgba(137, 43, 226, 0.429);
+  background-color: rgb(61, 56, 56);
   cursor: pointer;
+  color: white;
+  font-weight: 550;
   border: 2px solid rgba(0, 0, 0, 0.253);
-  border-radius: 50%;
 }
 .photo .big-box .closeee:hover {
-  background-color: rgba(137, 43, 226, 0.824);
+  background-color: black;
+  font-weight: 550;
+}
+.photo .big-box .zoom {
+  position: absolute;
+  top: 40px;
+  padding: 10px 18px;
+  right: 150px;
+  background-color: rgb(61, 56, 56);
+  cursor: pointer;
+  color: white;
+  font-weight: 550;
+  border: 2px solid rgba(0, 0, 0, 0.253);
+}
+.photo .big-box .zoom:hover {
+  background-color: black;
   font-weight: 550;
 }
 .photo .gallery {
@@ -854,42 +900,42 @@
 
 #p1 {
   background-image: url("./src/dogger_img_sm_1.jpg.webp");
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 #p2 {
   background-image: url("./src/dogger_img_sm_2.jpg.webp");
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 #p3 {
   background-image: url("./src/dogger_img_sm_3.jpg.webp");
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 #p4 {
   background-image: url("./src/dogger_img_sm_4.jpg.webp");
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 #p5 {
   background-image: url("./src/dogger_img_sm_5.jpg.webp");
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 #p6 {
   background-image: url("./src/dogger_img_sm_6.jpg.webp");
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
