--- a/_lastpage.scss
+++ b/_lastpage.scss
@@ -1,10 +1,11 @@
 .lastt {
-    width: 100vw;
+    width: 98vw;
     background-color: #333333;
     // height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
+    // border: 2px solid red;
 
     .darkkkk {
         width: 80%;
@@ -221,12 +222,13 @@
 }
 
 .lastline {
-    width: 100vw;
+    width: 98vw;
     background-color: #333333;
     height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
+
 
     .lline {
         width: 70%;
